revise the notebook

--- a/examples/kaggle_enfit23_setup.ipynb
+++ b/examples/kaggle_enfit23_setup.ipynb
@@ -22,7 +22,7 @@
     "    enfit1_rsa_val = base64.b64decode(enfit1_rsa_val).decode('ascii')    \n",
     "ngrok_token_val = kaggle_cfg.get(\"NGROK_TOKEN_1\", \"\")\n",
     "id_rsa_pub      = kaggle_cfg.get(\"ID_RSA_PUB\", \"\")\n",
-    "ssh_pass_val    = kaggle_cfg.get(\"NGROK_TOKEN_1\", \"12345\")"
+    "ssh_pass_val    = kaggle_cfg.get(\"SSH_PASS\", \"12345\")"
    ]
   },
   {
@@ -46,15 +46,6 @@
     "          install_ssh=True, \n",
     "          config_ssh=True, \n",
     "          password=ssh_pass_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_vscode()"
    ]
   },
   {
