add an example of git clone

--- a/examples/kaggle_enfit23_setup.ipynb
+++ b/examples/kaggle_enfit23_setup.ipynb
@@ -63,7 +63,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "setup_config_github(enfit1_rsa_val, 'enfit1_rsa', 'enfit23')"
+    "setup_config_github(enfit1_rsa_val, 'enfit1_rsa', 'math')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone math:duongngockhanh/colorful-image-colorization.git"
    ]
   }
  ],
